# github-actions-manager

./: Makefile  README.md  cli.py  gui.py  main.py  pyproject.toml
gui/: api.py  config.py  main_window.py  monitor_dialog.py  repo_panel.py  runs_panel.py  settings_dialog.py  styles.py  workers.py
