[project]
name = "github-actions-manager"
version = "0.1.0"
description = "Add your description here"
readme = "README.md"
requires-python = ">=3.10"
dependencies = [
    "requests>=2.32.5",
    "plyer>=2.1.0",
    "PySide6>=6.7.0",
    "platformdirs>=4.10.0",
]

[dependency-groups]
dev = [
    "pyinstaller>=6.17.0",
]

[tool.mypy]
ignore_missing_imports = true
